--- a/element-search/popups/task.html
+++ b/element-search/popups/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,21 +8,20 @@
     <title>Всплывающие окна</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Всплывающие окна.
-        </h1>
-    </header>      
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Всплывающие окна.</h1>
+    </header>
+       
     <div class="modal" id="modal_main">
-        <div class="modal__content">
-            <div class="modal__close modal__close_times">&times;</div>
-            <a href="#" class="btn btn_danger modal__close show-success">Сделать хорошо</a>
-        </div>
+      <div class="modal__content">
+        <div class="modal__close modal__close_times">&times;</div>
+        <a href="" class="btn btn_danger modal__close show-success">Сделать хорошо</a>
+      </div>
     </div>
 
     <div class="modal" id="modal_success">
@@ -114,5 +113,5 @@
     <div>Eum quas explicabo deserunt ab, iure nam quibusdam maxime ut repellat velit facere. Fuga ipsa deleniti, minima temporibus, sequi ad voluptate autem cumque aut placeat. Blanditiis magni odit, distinctio nostrum.</div>
 
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
