--- a/element-search/slider/task.html
+++ b/element-search/slider/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,49 +8,47 @@
     <title>Слайдер</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Слайдер.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Слайдер.</h1>
     </header>
     <div class="slider">
-        <div class="slider__items">
-            <div class="slider__item slider__item_active">
-                <img src="https://i.postimg.cc/Gpp6ryr0/180103-ufo-illustration-mn-1015-0758c11fb1637ed3431613cef06cd246.jpg" class="slider__image" alt="">
-            </div>
-            <div class="slider__item">
-                <img src="https://i.postimg.cc/rwj7v9BC/8ea2eb98-6cce-4f9f-96f0-60652623cf8e-large16x9-MGNgraphic-UFO-7.jpg" class="slider__image" alt="">
-            </div>
-            <div class="slider__item">
-                <img src="https://i.postimg.cc/YqKcg0Ng/baa78e55168b70c08147f44f0d66cd0e.jpg" class="slider__image" alt="">
-            </div>
-            <div class="slider__item">
-                <img src="https://i.postimg.cc/DwntjNMw/HV-UFO-1983-ftr.jpg" class="slider__image" alt="">
-            </div>
-            <div class="slider__item">
-                <img src="https://i.postimg.cc/yNrtN8YD/istock-611295678.jpg" class="slider__image" alt="">
-            </div>
+      <div class="slider__items">
+        <div class="slider__item slider__item_active">
+          <img class="slider__image" src="https://i.postimg.cc/Gpp6ryr0/180103-ufo-illustration-mn-1015-0758c11fb1637ed3431613cef06cd246.jpg" alt="image1">
         </div>
-        <div class="slider__navigation">
-            <div class="slider__arrows">
-                <div class="slider__arrow slider__arrow_prev">&lt;</div>
-                <div class="slider__arrow slider__arrow_next">&gt;</div>
-            </div>
-            <!-- Повышенная сложность. Раскомменируйте код -->
-            <!--<div class="slider__dots">
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-            </div>-->
+        <div class="slider__item">
+          <img class="slider__image" src="https://i.postimg.cc/rwj7v9BC/8ea2eb98-6cce-4f9f-96f0-60652623cf8e-large16x9-MGNgraphic-UFO-7.jpg" alt="image2">
         </div>
+        <div class="slider__item">
+          <img class="slider__image" src="https://i.postimg.cc/YqKcg0Ng/baa78e55168b70c08147f44f0d66cd0e.jpg" alt="image3">
+        </div>
+        <div class="slider__item">
+          <img class="slider__image" src="https://i.postimg.cc/DwntjNMw/HV-UFO-1983-ftr.jpg" alt="image4">
+        </div>
+        <div class="slider__item">
+          <img class="slider__image" src="https://i.postimg.cc/yNrtN8YD/istock-611295678.jpg" alt="image5">
+        </div>
+      </div>
+      <div class="slider__navigation">
+        <div class="slider__arrows">
+          <div class="slider__arrow slider__arrow_prev">&lt;</div>
+          <div class="slider__arrow slider__arrow_next">&gt;</div>
+        </div>
+        <!-- Повышенная сложность: -->
+        <div class="slider__dots">
+          <div class="slider__dot slider__dot_active"></div>
+          <div class="slider__dot"></div>
+          <div class="slider__dot"></div>
+          <div class="slider__dot"></div>
+          <div class="slider__dot"></div>
+        </div>
+      </div>
     </div>
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
