--- a/dom/reveal/task.html
+++ b/dom/reveal/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,15 +8,13 @@
     <title>Отображение элементов</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 2.1 «DOM». Появление элементов при прокрутке.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 2.1 «DOM». Появление элементов при прокрутке.</h1>
     </header>
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem placeat repudiandae hic, veritatis necessitatibus quod repellat assumenda exercitationem eligendi cum. Asperiores quas reiciendis soluta! Suscipit consequuntur alias corrupti quos architecto.</div>
     <div>Officia ex eveniet, animi nihil id repellendus. Libero sequi neque deserunt quod, ullam placeat reprehenderit mollitia expedita, repellendus voluptates repellat nam unde consequuntur omnis voluptatem hic, odio in aliquid facilis.</div>
@@ -99,9 +97,7 @@
     <div>Corrupti voluptates ipsam nulla eaque optio iure sit, expedita, placeat labore, ducimus quam reiciendis culpa velit. Libero excepturi illo fuga, perspiciatis, architecto doloribus porro modi repellat sit neque eligendi facere?</div>
     <div>Enim consectetur sint quae vel neque omnis error magnam maiores culpa repellat quis quia, tenetur dolorum atque blanditiis. Ipsa, facere consequuntur. Dolorum, voluptatibus cupiditate deserunt nostrum fugiat modi sed eos?</div>
 
-    <div class="reveal">
-        Преимущества нашей компании состоят в том, что они находятся очень далеко на странице
-    </div>
+    <div class="reveal">Преимущества нашей компании состоят в том, что они находятся очень далеко на странице</div>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolore dignissimos doloribus quis eveniet alias reprehenderit eius totam commodi. Quia quis porro perspiciatis corporis culpa facilis quam, facere libero a!</div>
     <div>Molestiae amet, nemo, facilis nostrum placeat quis quia optio doloremque ab explicabo culpa, libero corporis consequuntur inventore, autem illo ratione voluptate dignissimos! Alias illo, consectetur architecto fugit, ullam in. Itaque.</div>
@@ -184,10 +180,7 @@
     <div>Maiores aliquid, rerum similique aut nobis error eum facilis aliquam at, soluta accusantium. Minima tempora tenetur labore excepturi odit rem dolores dolore eaque recusandae, natus voluptatum, sit porro, ipsa mollitia?</div>
     <div>Voluptatem eveniet fugiat adipisci unde ipsum reprehenderit quo atque officiis, ducimus dolorem excepturi reiciendis accusamus harum alias nesciunt beatae facere. Delectus cum, quo explicabo aperiam voluptate ad totam, magni facilis!</div>
 
-
-    <div class="reveal">
-        Зачем вы находитесь на этом сайте?
-    </div>
+    <div class="reveal">Зачем вы находитесь на этом сайте?</div>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur fugit cum delectus dignissimos sunt, molestias voluptate nobis quae saepe. Dolorem fugit est sit voluptatum vero, impedit dicta, tempora natus sunt.</div>
     <div>Excepturi expedita, rerum nulla magnam eius ut animi esse illum dolorum voluptatibus quisquam tempora ex necessitatibus assumenda libero natus qui nostrum omnis sed? Ab explicabo iusto dolore quisquam deserunt voluptatibus.</div>
@@ -270,5 +263,5 @@
     <div>Atque saepe, tempora dolore doloremque beatae reiciendis, nisi accusantium natus pariatur ipsa commodi voluptate praesentium modi, excepturi amet quae veniam architecto consectetur odit culpa! Ipsum facere, dignissimos ex. Repellat, dolorum!</div>
     <div>Error voluptate assumenda distinctio, neque totam veritatis ad voluptatibus doloribus aspernatur nesciunt repudiandae eum asperiores esse incidunt tempora labore a eveniet impedit quasi voluptas reiciendis provident optio minima. Aperiam, quo!</div>
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
