--- a/document-structure/tooltip/task.html
+++ b/document-structure/tooltip/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,31 +8,22 @@
     <title>Всплывающая подсказка</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 2.3 «Изменение структуры HTML-документа». Всплывающая подсказка.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 2.3 «Изменение структуры HTML-документа». Всплывающая подсказка.</h1>
     </header>
     <a href="" class="has-tooltip" title="Что бы вы хотели?">Помогите пожалуйста</a>
-    <!-- <div class="tooltip" style="left: 0; top: 0">
-      Проверка!
-    </div> -->
-
     <a href="" class="has-tooltip" title="Устройтесь на работу!">Нажми сюда и выиграй миллион!</a>
-
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi facere dolor dicta accusamus corporis itaque quam deleniti, earum similique alias nostrum corrupti aspernatur, beatae, veniam vel quidem tenetur, odit reiciendis.</div>
     <div>Laboriosam aliquid neque in itaque at eaque, similique nisi consequatur voluptatem nam blanditiis eum ab, pariatur, harum molestias quas veniam. Aliquam maxime ipsa neque earum accusantium suscipit quasi. Harum, atque.</div>
     <div>Commodi fugiat vitae facere, provident voluptatem architecto reprehenderit. Nemo natus, qui quia animi voluptatibus. Cupiditate dolores, ducimus, nihil adipisci nemo dolorum aliquam eveniet obcaecati aperiam quis eum corporis velit! Esse.</div>
     <div>Earum deleniti laborum sunt ea, inventore voluptatum. Excepturi maiores laboriosam fugit, inventore hic quae ipsum, sequi ipsam expedita quisquam provident velit dolorum natus atque qui dignissimos numquam, quam, debitis! Error!</div>
     <div>Autem iure cum, accusantium soluta dolor beatae voluptas, ipsa ad quas dignissimos. Laboriosam laborum praesentium necessitatibus cumque tempore animi similique corporis quas, ipsam suscipit id possimus deserunt vitae incidunt eos.</div>
-    <div>Autem, temporibus, nihil. Debitis quasi ex minus, delectus
-        <a href="" class="has-tooltip" title="Это просто подсказка!">Для просмотра подсказки нажмите сюда</a>
-         doloremque officiis sint facere, ducimus impedit! Sit, minima, et modi reiciendis sequi quo, voluptas dignissimos fugit veritatis quis nobis dolor saepe. Nobis!</div>
+    <div>Autem, temporibus, nihil. Debitis quasi ex minus, delectus <a href="" class="has-tooltip" title="Это просто подсказка!">Для просмотра подсказки нажмите сюда</a> doloremque officiis sint facere, ducimus impedit! Sit, minima, et modi reiciendis sequi quo, voluptas dignissimos fugit veritatis quis nobis dolor saepe. Nobis!</div>
     <div>Itaque eum maxime tempora soluta, impedit placeat, dolores quod esse quibusdam saepe consequatur pariatur maiores? Ex minima delectus unde sit repudiandae quidem maxime non velit aliquam temporibus nulla, magnam, laboriosam!</div>
     <div>Eum maiores doloribus, unde vel, doloremque, perferendis amet perspiciatis et distinctio natus veniam tempora magni possimus. Eius repellat molestiae nihil deserunt accusantium provident soluta eligendi, sequi possimus suscipit, laudantium, rem!</div>
     <div>Odit voluptas quisquam minus id magni, temporibus cupiditate rem aspernatur nihil ipsam? Minima, tempora perspiciatis doloribus ut nulla. Magni tempore repellendus voluptatem nisi esse minima ipsam, saepe facere et qui?</div>
@@ -47,11 +38,9 @@
     <div>Eveniet iusto, placeat architecto enim fugiat obcaecati, ullam perferendis in culpa commodi, provident magnam similique natus nobis. Illum, dolores, voluptate placeat laboriosam soluta cupiditate possimus, ea aspernatur quis debitis sint.</div>
     <div>Eligendi reiciendis doloremque veritatis rerum corporis voluptatem est expedita porro fuga quae. Nam hic asperiores consequatur odit, ea, illo vitae quis non, aperiam tenetur architecto sint, nisi iure ipsum laudantium.</div>
     <div>Ad, repellendus doloremque. Debitis molestiae recusandae vero, quasi autem iusto mollitia deserunt odio delectus voluptatum dicta quae, tempora sint doloremque rem. Quod eum fugiat magni nostrum, dolore eligendi vel nisi.</div>
-
     <a href="" class="has-tooltip" title="Выхода нет, скоро рассвет">Конец страницы</a>
-
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut aspernatur praesentium ipsum perferendis voluptas omnis ab quidem, corrupti corporis aperiam, architecto, doloremque sequi at nisi fugit quaerat molestiae quae consectetur!</div>
     <div>Modi ab asperiores est quae consectetur inventore perferendis! Voluptatibus cumque voluptate repellat, earum ad nulla et natus eligendi. Repellat ad iusto facilis dolorem recusandae, modi suscipit sapiente soluta nihil quam!</div>
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
