--- a/client-state/text-editor/task.html
+++ b/client-state/text-editor/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,21 +8,20 @@
     <title>Текстовый редактор</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Текстовый редактор.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Текстовый редактор.</h1>
     </header>
     <main class="content">
-        <div class="card">
-            <textarea id="editor" cols="30" rows="10"></textarea>
-        </div>
+      <div class="card">
+        <textarea id="editor" cols="30" rows="10"></textarea>
+        <button type="button" class="button_reset">очистить поле</button>
+      </div>
     </main>    
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
