--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,37 +8,36 @@
     <title>Авторизация</title>
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="task.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Авторизация.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Авторизация.</h1>
     </header>
     <main class="content">
-        <div class="card">
-            <div class="signin signin_active" id="signin">
-                <h2 class="title">Вход</h2>
-                <form action="https://students.netoservices.ru/nestjs-backend/auth" id="signin__form">
-                    <div class="row">
-                        <input type="text" name="login" class="control" placeholder="Логин">
-                    </div>
-                    <div class="row">
-                        <input type="password" name="password" class="control" placeholder="Пароль">
-                    </div>
-                    <div class="row">
-                        <button class="btn" id="signin__btn">Войти</button>
-                    </div>
-                </form>
+      <div class="card">
+        <div class="signin signin_active" id="signin">
+          <h2 class="title">Вход</h2>
+          <form action="https://students.netoservices.ru/nestjs-backend/auth" id="signin__form">
+            <div class="row">
+              <input type="text" name="login" class="control" placeholder="Логин">
             </div>
-            <div class="welcome" id="welcome">
-                Добро пожаловать, пользователь #<span id="user_id"></span>
+            <div class="row">
+              <input type="password" name="password" class="control" placeholder="Пароль">
             </div>
+            <div class="row">
+              <button class="btn" id="signin__btn">Войти</button>
+            </div>
+          </form>
         </div>
-        </main>
+        <div class="welcome" id="welcome">
+          Добро пожаловать, пользователь #<span id="user_id"></span>
+        </div>
+        <button type="button" id="btn-logout" class="btn-logout">Выйти</button>
+      </div>
+    </main>
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
