--- a/client-state/popup/task.html
+++ b/client-state/popup/task.html
@@ -1,6 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,21 +8,19 @@
     <title>Всплывающие окно</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Всплывающие окно.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">Домашнее задание к занятию 3.2 «Хранение состояния на клиенте». Всплывающие окно.</h1>
     </header>
     <div class="modal" id="subscribe-modal">
-        <div class="modal__content">
-            <div class="modal__close modal__close_times">&times;</div>
-            Подпишитесь на нашу рассылку пожалуйста!
-        </div>
+      <div class="modal__content">
+        <div class="modal__close modal__close_times">&times;</div>
+        Подпишитесь на нашу рассылку пожалуйста!
+      </div>
     </div>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore magni dolorem officia, blanditiis, alias velit obcaecati error commodi sint placeat adipisci, earum animi. Reprehenderit quasi, veritatis ea in suscipit odit.</div>
@@ -107,5 +105,5 @@
     <div>Omnis dignissimos animi modi quia dolores totam voluptates labore odit hic itaque fugiat, in impedit iste, corrupti cum iure quas maiores, vero! Dignissimos deserunt, dolorum neque itaque maiores ipsam molestias!</div>
 
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
